Update and rename 2021-01-01-我常用的APP.md to 2021-01-01-myAPP.md

--- a/_posts/2021-01-01-myAPP.md
+++ b/_posts/2021-01-01-myAPP.md
@@ -5,10 +5,15 @@ categories: [推荐,APP]
 ---
 
 # 我的常用APP
-> 记录一下常用的app，方便以后再一个一个找了。
-> 大家有好用的也可推荐给我试试。
+1. 记录一下常用的app，方便以后再一个一个找了。
+2. 记录一些好用的网址。
+3. 大家有好用的也可推荐给我试试。
 
 -----
+
+## 好用的网址
+
+- iphone信息查询[https://sickw.com/](https://sickw.com/)
 
 ## windows平台
 ### [【Everything】](https://www.voidtools.com/)**搜索神器之一**
